backends/drm: fix format choosing

The logic was inverted and would choose the format after the first one that
is suitable. On most hardware that wouldn't cause noticable issues as that
will choose the ARGB variant of the normal format, but some Intel hardware
doesn't support these and thus a lower bit depth format than intended gets
used.

BUG: 450779